# Giterra

./: .env  .gitignore  README.md  main.py  package-lock.json  pyproject.toml
backend/: README.md  auth.py  database.py  docker-compose.yml  graph.py  main.py  models.py  pyproject.toml  schemas.py  test_github.py
backend/app/: database.py  dependencies.py  models.py  schemas.py
backend/app/core/: config.py
backend/app/routers/: analyze.py  auth.py  planet.py  repo.py
backend/app/services/: github.py  graph.py
backend/data/: seed_data.json
backend/docs/: DATA_ASSET_GUIDE.md  DATA_PIPELINE.md
backend/scripts/: batch_collector.py  dump_seed.py  load_seed.py  view_data.py
docs/: ANALYSIS_SERVICE_PLAN.md
frontend/: .env.sample  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/analysis/: InsightCard.tsx  InsightModal.tsx
frontend/src/components/cities/: Cities.tsx
frontend/src/components/hero/: HologramPlanet.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/planet/: OctantBoundaries.tsx  Planet.tsx  PlanetAssetRenderer.tsx  PlanetScene.tsx  PlanetSegments.tsx  WireframeDottedGlobe.tsx  ZoomController.tsx
frontend/src/data/: mockSelectedRepos.ts
frontend/src/lib/: placements.ts
frontend/src/scenes/: PlanetExperience.tsx
frontend/src/services/: api.ts
frontend/src/store/: useAuthStore.ts  useLanguageStore.ts  usePlanetStore.ts
frontend/src/types/: city.ts  index.ts  repo.ts  store.ts
frontend/src/utils/: planetGenerator.ts
skills/: SKILL.md
(+6 files in other folders)
